fixed major bug - still not really nice results

--- a/toy_example.ipynb
+++ b/toy_example.ipynb
@@ -2926,11 +2926,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-6.0572762]],\n",
+       "\n",
+       "       [[-5.860335 ]],\n",
+       "\n",
+       "       [[-6.0449767]],\n",
+       "\n",
+       "       [[-5.0361924]],\n",
+       "\n",
+       "       [[-4.400876 ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim.data[out_p]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation finished in 0:00:00                                                 \n"
+     ]
+    }
+   ],
+   "source": [
+    "sim.run_steps(1,input_feeds={inp: target[0:5,None,None]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
